adding thumbnails pics and adding opacity filter

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,9 @@
 }
 
 .thumbnails img{
-    width: calc(100% / 5);
-    
+    width: calc(100% / 5);    
+}
+
+.thumbnails img:not(.active){
+    opacity: 50%;
 }
