--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,12 +11,8 @@
 }
 .card img{
     max-width: 100%;
+    object-fit: cover;
 }
-
-.card-body{
-    top: 100%;
-}
-
 
 .thumbnails img{
     width: calc(100% / 5);    
